force-app/main/default/objects/PBS_Lease__c/PBS_Lease__c.object-meta.xml
<CustomObject>
    <description>PBS Common Lease Object</description>
    <label>PBS Lease</label>
    <nameField>
        <label>PBS Lease Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PBS Leases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>