force-app/main/default/objects/PBS_Lease__c/fields/Building_City__c.field-meta.xml
<CustomField>
    <fullName>Building_City__c</fullName>
    <formula>PBS_Building__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building City</label>
    <type>Text</type>
</CustomField>