force-app/main/default/objects/PBS_Lease__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <formula>PBS_Building__r.Building_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Name</label>
    <type>Text</type>
</CustomField>