force-app/main/default/objects/PBS_Lease__c/fields/Building_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Building_State_Code__c</fullName>
    <formula>PBS_Building__r.State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building State Code</label>
    <type>Text</type>
</CustomField>