force-app/main/default/objects/PBS_Lease__c/fields/Building_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Building_Street_Address__c</fullName>
    <formula>PBS_Building__r.Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Street Address</label>
    <type>Text</type>
</CustomField>