force-app/main/default/objects/PBS_Lease__c/fields/Building_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Building_Zip_Code__c</fullName>
    <formula>PBS_Building__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Zip Code</label>
    <type>Text</type>
</CustomField>