force-app/main/default/objects/PBS_Lease__c/fields/Lease_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_Contact_ID__c</fullName>
    <label>Lease Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>