force-app/main/default/objects/PBS_Lease__c/fields/Lease_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Effective_Date__c</fullName>
    <label>Lease Effective Date</label>
    <type>Date</type>
</CustomField>