force-app/main/default/objects/PBS_Lease__c/fields/Lease_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiration_Date__c</fullName>
    <label>Lease Expiration Date</label>
    <type>Date</type>
</CustomField>