force-app/main/default/objects/PBS_Lease__c/fields/Lease_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_Location_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lease Location ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>