force-app/main/default/objects/PBS_Lease__c/fields/Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Number__c</fullName>
    <label>Lease Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>