force-app/main/default/objects/PBS_Lease__c/fields/Lessor__c.field-meta.xml
<CustomField>
    <fullName>Lessor__c</fullName>
    <label>Lessor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>