force-app/main/default/objects/PBS_Lease__c/fields/LMC_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>LMC_Contact_Email__c</fullName>
    <label>LMC Contact Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>