force-app/main/default/objects/PBS_Lease__c/fields/LMC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>LMC_Last_Name__c</fullName>
    <label>LMC Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>