force-app/main/default/objects/PBS_Lease__c/fields/LSR_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>LSR_Contact_Email__c</fullName>
    <label>LSR Contact Email</label>
    <type>Email</type>
</CustomField>