force-app/main/default/objects/PBS_Lease__c/fields/LSR_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>LSR_Email_Text__c</fullName>
    <description>Rexus use this field to save the poc email address and in before trigger, we have to validate this value and populate it to &apos;LSR Contact Email&apos; field which will be used to searching poc user.</description>
    <label>LSR Email Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>