force-app/main/default/objects/PBS_Lease__c/fields/LSR_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>LSR_Last_Name__c</fullName>
    <label>LSR Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>