force-app/main/default/objects/PBS_Lease__c/fields/LSR_Not_POC_Owner__c.field-meta.xml
<CustomField>
    <fullName>LSR_Not_POC_Owner__c</fullName>
    <formula>IF(( Owner:User.Email &lt;&gt; LSR_Contact_Email__c ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LSR Not POC Owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>