force-app/main/default/objects/PBS_Lease__c/fields/Occupancypercentage__c.field-meta.xml
<CustomField>
    <fullName>Occupancypercentage__c</fullName>
    <label>Occupancy Percentage</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>