force-app/main/default/objects/PBS_Lease__c/fields/PBS_Building__c.field-meta.xml
<CustomField>
    <fullName>PBS_Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBS Building</label>
    <referenceTo>PBS_Building__c</referenceTo>
    <relationshipLabel>PBS Leases</relationshipLabel>
    <relationshipName>PBS_Leases</relationshipName>
    <type>Lookup</type>
</CustomField>