force-app/main/default/objects/PBS_Lease__c/fields/Short_Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Short_Lease_Number__c</fullName>
    <formula>if(NOT(ISBLANK(Lease_Number__c)),if( LEN(Lease_Number__c)&gt;5, RIGHT(Lease_Number__c, 5),Lease_Number__c ),&apos;&apos;)</formula>
    <label>Short Lease Number</label>
    <type>Text</type>
</CustomField>