force-app/main/default/objects/PBS_Lease__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lease_Number__c</columns>
    <columns>Building_Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>